--- a/source/app/src/main/res/values/strings.xml
+++ b/source/app/src/main/res/values/strings.xml
@@ -21,5 +21,10 @@
     <string name="password_not_match">Mật khẩu không khớp</string>
     <string name="password_wrong_regex">Mật khẩu phải bao gồm cả chữ, số, viết hoa, viết thường và cả những kí tự đặc biệt</string>
     <string name="create_account_success">Tạo tài khoản thành công</string>
+    <string name="home">Trang chủ</string>
+    <string name="university">Trường</string>
+    <string name="search">Tìm kiếm</string>
+    <string name="favorite">Yêu thích</string>
+    <string name="account">Tài khoản</string>
 
 </resources>
