--- a/source/app/src/main/res/values/strings.xml
+++ b/source/app/src/main/res/values/strings.xml
@@ -29,5 +29,6 @@
     <string name="university_info">Thông tin</string>
     <string name="university_fields">Ngành đào tạo</string>
     <string name="date_format">%1$td/%1$tm/%1$tY</string>
+    <string name="format_price">%1$,.0f VNĐ</string>
 
 </resources>
