--- a/source/app/src/main/res/values/strings.xml
+++ b/source/app/src/main/res/values/strings.xml
@@ -23,7 +23,7 @@
     <string name="create_account_success">Tạo tài khoản thành công</string>
     <string name="home">Trang chủ</string>
     <string name="university">Trường</string>
-    <string name="search">Tìm kiếm</string>
+    <string name="search">Chat</string>
     <string name="favorite">Yêu thích</string>
     <string name="account">Tài khoản</string>
     <string name="university_info">Thông tin</string>
