--- a/source/app/src/main/res/values/strings.xml
+++ b/source/app/src/main/res/values/strings.xml
@@ -20,6 +20,7 @@
     <string name="already_have_account">Email đã được đăng kí</string>
     <string name="password_not_match">Mật khẩu không khớp</string>
     <string name="password_wrong_regex">Mật khẩu phải bao gồm cả chữ, số, viết hoa, viết thường và cả những kí tự đặc biệt</string>
+    <string name="old_password_wrong_regex">Mật khẩu cũ phải bao gồm cả chữ, số, viết hoa, viết thường và cả những kí tự đặc biệt</string>
     <string name="create_account_success">Tạo tài khoản thành công</string>
     <string name="home">Trang chủ</string>
     <string name="university">Trường</string>
