--- a/source/app/src/main/res/values/strings.xml
+++ b/source/app/src/main/res/values/strings.xml
@@ -19,7 +19,7 @@
     <string name="confirm_password">Nhập lại mật khẩu</string>
     <string name="already_have_account">Email đã được đăng kí</string>
     <string name="password_not_match">Mật khẩu không khớp</string>
-    <string name="password_wrong_regex">Mật khẩu phải bao gồm cả chữ, số, viết hoa, viết thường và cả những kí tự đặc biệt</string>
+    <string name="password_wrong_regex">Mật khẩu phải bao gồm cả chữ, số, viết hoa, viết thường và cả những kí tự đặc biệt. Mật khẩu phải có ít nhất 8 kí tự và không được có khoảng trắng</string>
     <string name="old_password_wrong_regex">Mật khẩu cũ phải bao gồm cả chữ, số, viết hoa, viết thường và cả những kí tự đặc biệt</string>
     <string name="create_account_success">Tạo tài khoản thành công</string>
     <string name="home">Trang chủ</string>
